<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/ic_arrow_back"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        />

    <EditText
        android:id="@+id/departureHolder"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/lightgreen"
        android:hint="@string/addStart"
        android:minHeight="40dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/deepgreen"
        app:layout_constraintTop_toBottomOf="@id/backButton"
 />

    <EditText
        android:id="@+id/arrivalHolder"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/departureHolder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:minHeight="40dp"
        android:background="@color/lightgreen"
        android:hint="@string/addEnd"
        android:textColorHint="@color/deepgreen"
        android:textAlignment="center"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/seatsHolder"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrivalHolder"
        android:background="@color/lightgreen"
        android:hint="@string/addSeatNo"
        android:textColorHint="@color/deepgreen"
        android:textAlignment="center"
        android:minHeight="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/dateHolder"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seatsHolder"
        android:background="@color/lightgreen"
        android:hint="@string/addDate"
        android:textColorHint="@color/deepgreen"
        android:textAlignment="center"
        android:minHeight="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/rideNumberHolder"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateHolder"
        android:background="@color/lightgreen"
        android:hint="@string/addPhoneNo"
        android:textColorHint="@color/deepgreen"
        android:textAlignment="center"
        android:minHeight="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/addButton"
        android:layout_width="200dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/rideNumberHolder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/deepgreen"
        android:textColor="@color/lightgreen"
        android:textStyle="bold"
        android:text="@string/addRide"
        />

    <ImageView
        android:id="@+id/addRide"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:src="@drawable/addaride"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addButton"
        android:layout_marginTop="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>